--- a/miapp/src/components/Contador/Contador.css
+++ b/miapp/src/components/Contador/Contador.css
@@ -1,3 +1,7 @@
+.parrafoContador{
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
 .container-contador{
     padding: 10px;
     border-radius: 100%;
