--- a/miapp/src/components/InputAgregar/InputAgregar.css
+++ b/miapp/src/components/InputAgregar/InputAgregar.css
@@ -1,4 +1,57 @@
 .input-group-agregar{
-    display: flex;
-    flex-direction: column;
+    margin-left: 10px;
+}
+/* estilos del boton */
+.button-add {
+    position: relative;
+    width: 10em;
+    height: 2em;
+    text-align: center;
+    font-size: 17px;
+    font-weight: 300;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #fff;
+    cursor: pointer;
+    background-color: rgba(3, 3, 3, .5);
+    border: none;
+    transition: color .2s linear,
+    box-shadow .3s linear,
+    background-color .3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.button-add:focus,
+.button-add:hover {
+    box-shadow: 0 0 110px #fff;
+    background-color: rgba(255, 255, 255, 0.4);
+    color: #111;
+    font-weight: 500;
+}
+
+.button-add:focus:before,
+.button-add:hover:before,
+.button-add:focus:after,
+.button-add:hover:after {
+    width: 100%;
+    left: 0%;
+}
+
+.button-add:before,
+.button-add:after {
+    content: '';
+    position: absolute;
+    pointer-events: none;
+    left: 50%;
+    width: 0%;
+    height: 2px;
+    background-color: #fff;
+    transition: width, left, 250ms cubic-bezier(0.25, .8, .25, 1);
+}
+
+.button-add:before {
+    top: -2px;
+}
+
+.button-add:after {
+    bottom: -2px;
 }
