--- a/miapp/src/index.css
+++ b/miapp/src/index.css
@@ -1,5 +1,12 @@
 body {
   background-color: black;
+  /* background-image: url(../public/fondoRS.gif);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover; 
+  background-attachment: fixed; 
+  background-size: 150% 100%; */
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
