--- a/miapp/src/pages/ToDo/ToDo.css
+++ b/miapp/src/pages/ToDo/ToDo.css
@@ -1,8 +1,6 @@
+/* estilos del contenedor */
 .container{
-    margin-top: 20px;
-    /* margin: 30px;
-      padding: 20px; */
-
+    margin-top: 30px;
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -10,16 +8,86 @@
     border: solid 1px rgba(255, 255, 255, 0.5);
 }
 
+/* estilos de letra */
 h1{
-    margin-top: 20px;
-    margin-bottom: 20px;
-
-    color: white;
+    color: hsla(0, 0%, 0%, .9);
+    font: normal 40px Varela Round, sans-serif;
+    left: 0;
+    letter-spacing: 5px;
+    margin: -80px 0 0 0;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    top: 25%;
+    width: 100%;
+    animation: move linear 2000ms infinite;  
+}
+/* animacion de letras */
+@keyframes move {
+    0% {
+    text-shadow:
+        4px -4px 0 hsla(0, 100%, 50%, 1), 
+        3px -3px 0 hsla(0, 100%, 50%, 1), 
+        2px -2px 0 hsla(0, 100%, 50%, 1), 
+        1px -1px 0 hsla(0, 100%, 50%, 1),
+        -4px 4px 0 hsla(180, 100%, 50%, 1), 
+        -3px 3px 0 hsla(180, 100%, 50%, 1), 
+        -2px 2px 0 hsla(180, 100%, 50%, 1), 
+        -1px 1px 0 hsla(180, 100%, 50%, 1)
+    ;
+}
+    25% {    
+    text-shadow:      
+        -4px -4px 0 hsla(180, 100%, 50%, 1), 
+        -3px -3px 0 hsla(180, 100%, 50%, 1), 
+        -2px -2px 0 hsla(180, 100%, 50%, 1), 
+        -1px -1px 0 hsla(180, 100%, 50%, 1),
+        4px 4px 0 hsla(0, 100%, 50%, 1), 
+        3px 3px 0 hsla(0, 100%, 50%, 1), 
+        2px 2px 0 hsla(0, 100%, 50%, 1), 
+        1px 1px 0 hsla(0, 100%, 50%, 1)      
+    ;
+}
+    50% {
+    text-shadow:
+        -4px 4px 0 hsla(0, 100%, 50%, 1), 
+        -3px 3px 0 hsla(0, 100%, 50%, 1), 
+        -2px 2px 0 hsla(0, 100%, 50%, 1), 
+        -1px 1px 0 hsla(0, 100%, 50%, 1),
+        4px -4px 0 hsla(180, 100%, 50%, 1), 
+        3px -3px 0 hsla(180, 100%, 50%, 1), 
+        2px -2px 0 hsla(180, 100%, 50%, 1), 
+        1px -1px 0 hsla(180, 100%, 50%, 1)
+    ;
+}
+    75% {
+    text-shadow:
+        4px 4px 0 hsla(180, 100%, 50%, 1), 
+        3px 3px 0 hsla(180, 100%, 50%, 1), 
+        2px 2px 0 hsla(180, 100%, 50%, 1), 
+        1px 1px 0 hsla(180, 100%, 50%, 1),
+        -4px -4px 0 hsla(0, 100%, 50%, 1), 
+        -3px -3px 0 hsla(0, 100%, 50%, 1), 
+        -2px -2px 0 hsla(0, 100%, 50%, 1), 
+        -1px -1px 0 hsla(0, 100%, 50%, 1)      
+    ;
+}
+    100% {
+    text-shadow:
+        4px -4px 0 hsla(0, 100%, 50%, 1), 
+        3px -3px 0 hsla(0, 100%, 50%, 1), 
+        2px -2px 0 hsla(0, 100%, 50%, 1), 
+        1px -1px 0 hsla(0, 100%, 50%, 1),
+        -4px 4px 0 hsla(180, 100%, 50%, 1), 
+        -3px 3px 0 hsla(180, 100%, 50%, 1), 
+        -2px 2px 0 hsla(180, 100%, 50%, 1), 
+        -1px 1px 0 hsla(180, 100%, 50%, 1)
+    ;
+}  
 }
 
-
 .inputs{
-    margin-top: 10px;
+    margin-top: 130px;
     display: flex;
     justify-content: space-between;
 }
@@ -34,4 +102,27 @@ h1{
     .Tareas-Completadas{
         margin: 15px 0px;
     }
+}
+
+.contenedorTareas{
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    border: solid 1px rgba(255, 255, 255, 0.5);
+}
+
+.Tareas{
+    padding: 20px;
+}
+
+.inputSearch{
+    display: flex;
+    flex-direction: row;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+.textNoTasks{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
