--- a/miapp/src/components/Contador/Contador.css
+++ b/miapp/src/components/Contador/Contador.css
@@ -1,6 +1,7 @@
 .parrafoContador{
     margin-bottom: 10px;
     margin-right: 10px;
+    color: white;
 }
 .container-contador{
     padding: 10px;
