--- a/miapp/src/components/Tareas/Tareas.css
+++ b/miapp/src/components/Tareas/Tareas.css
@@ -9,4 +9,19 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 10px;
+
+}
+.input{
+    margin-left: 5px;
+}
+
+.botonEliminar{
+    margin-right: 5px;
+}
+
+.parrafo-lista{
+    color: white;
+    font-size: 60%;
+    /* word-wrap: break-word; */
 }
