--- a/miapp/src/index.css
+++ b/miapp/src/index.css
@@ -1,11 +1,11 @@
 body {
   background-color: black;
-  /* background-image: url(../public/fondoRS.gif);
+  /* background-image: url(../public/burbujas.gif);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover; 
   background-attachment: fixed; 
-  background-size: 150% 100%; */
+  background-size: 200% 200%; */
 
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
