--- a/miapp/src/components/InputAgregar/InputAgregar.css
+++ b/miapp/src/components/InputAgregar/InputAgregar.css
@@ -55,3 +55,37 @@
 .button-add:after {
     bottom: -2px;
 }
+
+/* diseño del input agregar tareas */
+.inputAdd {
+    max-width: 190px;
+    height: 45px;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding-left: 15px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+    position: relative;
+  }
+  
+  .inputAdd:valid {
+    border-color: #ffffff;
+    color: #000000;
+    box-shadow: 2px 2px 8px 1px #ffffff;
+  }
+  
+  .inputAdd:invalid {
+    border-color: #ff0000;
+    color: #ff0000;
+    box-shadow: 2px 2px 8px 1px #ff0000;
+    /* translate: -8px 8px 0px 0px; */
+  }
+  
+  .text {
+    margin-top: 10px;
+    color: black;
+  }
+  
