--- a/miapp/src/components/Tareas/Tareas.css
+++ b/miapp/src/components/Tareas/Tareas.css
@@ -1,27 +1,90 @@
-.contenedor{
+.contenedor {
     border-radius: 5px;
     background: rgba(0, 0, 0, 0.3);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
     border: solid 1px rgba(255, 255, 255, 0.5);
 }
-.grupotareas{
+
+.grupotareas {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 10px;
+    padding: 10px;
 
 }
-.input{
+
+.input {
     margin-left: 5px;
+    width: 20px;
 }
 
-.botonEliminar{
+
+.botonEliminar {
     margin-right: 5px;
 }
 
-.parrafo-lista{
+.parrafo-lista {
     color: white;
-    font-size: 60%;
-    /* word-wrap: break-word; */
+    word-break: break-all;
+}
+
+.check {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+    appearance: none;
+    background-color: #bbb;
+    transition: all .3s;
+}
+
+.check::before {
+    content: '';
+    position: absolute;
+    border: solid #fff;
+    display: block;
+    width: .4em;
+    height: .9em;
+    border-width: 0 .2em .2em 0;
+    z-index: 1;
+    opacity: 0;
+    right: calc(50% - .3em);
+    top: calc(50% - .6em);
+    transform: rotate(0deg);
+    transition: all .3s;
+    transform-origin: center center;
+}
+
+.check:checked {
+    animation: a .3s ease-in forwards;
+    background-color: rgb(40, 191, 40);
+}
+
+.check:checked::before {
+    opacity: 1;
+    transform: rotate(405deg);
+}
+
+@keyframes a {
+    0% {
+        opacity: 1;
+        transform: scale(1) rotateY(0deg);
+    }
+
+    50% {
+        opacity: 0;
+        transform: scale(.8) rotateY(180deg);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1) rotateY(360deg);
+    }
+}
+
+
+.check {
+    margin-top: 10px;
 }
