--- a/miapp/src/components/Contador/Contador.css
+++ b/miapp/src/components/Contador/Contador.css
@@ -1,13 +1,55 @@
-.parrafoContador{
+.parrafoContador {
     margin-bottom: 10px;
     margin-right: 10px;
+    margin-top: 30px;
     color: white;
 }
-.container-contador{
+
+/* .container-contador {
     padding: 10px;
     border-radius: 100%;
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
     border: solid 1px rgba(255, 255, 255, 0.5);
+} */
+
+.Tareas-Completadas{
+    display: flex;
+    flex-direction: row;
+}
+
+.loader {
+    width: 90px;
+    height: 90px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loader_cube {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
+
+.loader_cube--glowing {
+    z-index: 2;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.loader_cube--color {
+    z-index: 1;
+    filter: blur(2px);
+    background: linear-gradient(135deg, #00ffff, #ff0000);
+    animation: loadtwo 2.5s ease-in-out infinite;
+}
+
+@keyframes loadtwo {
+    50% {
+        transform: rotate(-80deg);
+    }
 }
