--- a/miapp/src/pages/SignUp/SignUp.css
+++ b/miapp/src/pages/SignUp/SignUp.css
@@ -1,15 +1,16 @@
-/* @media screen and (max-width: 500px) {
+
+/* .todo {
+    background-color: white;
+    margin-top: 60%; 
+    margin-top: 300px;
+    margin-left: 600px;
+} */
+/* @media screen and (min-width: 200px) {
     .todo {
-        margin-top: auto;
-        margin-left: auto;
+        margin-top: 95%;
     }
     
 } */
-
-.todo {
-    margin-top: 300px;
-    margin-left: 600px;
-}
 
 .wrapper {
     --input-focus: #b4b4b4;
@@ -18,9 +19,9 @@
     --bg-color: #111;
     --bg-color-alt: #7e7e7e;
     --main-color: #fefefe;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: center; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* switch card */
